<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/layoutAddUrlContainer"
    android:background="@drawable/background_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_30sdp">

    <ImageView
        android:id="@+id/imageAddURL"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:src="@drawable/web_link"
        android:contentDescription="@string/app_name"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorIcons"/>

    <TextView
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_urll"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntubold"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageAddURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageAddURL"
        app:layout_constraintTop_toTopOf="@+id/imageAddURL"/>

    <EditText
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorTextHint"
        android:gravity="center_vertical"
        android:id="@+id/inputURL"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="Enter URL"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:imeOptions="actionDone"
        android:fontFamily="@font/ubunturegular"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_1sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/imageAddURL"/>

    <TextView
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorAccent"
        android:id="@+id/textAdd"
        android:padding="@dimen/_8sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/add"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntumedium"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputURL"/>

    <TextView
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/colorAccent"
        android:id="@+id/textCancel"
        android:padding="@dimen/_8sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:text="@string/cancel"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntumedium"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textAdd"
        app:layout_constraintTop_toBottomOf="@+id/inputURL"/>

</androidx.constraintlayout.widget.ConstraintLayout>
