<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/layoutMiscellaneous"
    android:background="@drawable/background_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="@dimen/_57sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <View
        android:layout_gravity="center_horizontal"
        android:id="@+id/viewArrowMiscellaneout"
        android:background="@drawable/arrow_up"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="-20dp"
        android:backgroundTint="@color/colorAccent" />

    <TextView
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/miscellaneous"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntumedium" />

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutNoteColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewNoteColor1"
                android:background="@drawable/background_note_color_1"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp" />

            <ImageView
                android:id="@+id/imageColor1"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/done"
                android:contentDescription="@string/app_name"
                app:tint="@color/colorBlack" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewNoteColor2"
                android:background="@drawable/background_note_color_2"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp" />

            <ImageView
                android:id="@+id/imageColor2"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                app:tint="@color/colorBlack" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewNoteColor3"
                android:background="@drawable/background_note_color_3"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp" />

            <ImageView
                android:id="@+id/imageColor3"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                app:tint="@color/colorBlack" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewNoteColor4"
                android:background="@drawable/background_note_color_4"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp" />

            <ImageView
                android:id="@+id/imageColor4"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                app:tint="@color/colorBlack" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewNoteColor5"
                android:background="@drawable/background_note_color_5"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp" />

            <ImageView
                android:id="@+id/imageColor5"
                android:padding="@dimen/_10sdp"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:contentDescription="@string/app_name"
                app:tint="@color/colorBlack" />

        </FrameLayout>

        <TextView
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_color"
            android:includeFontPadding="false"
            android:fontFamily="@font/ubuntumedium" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/image"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorIcons" />

        <TextView
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorIcons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Image"
            android:includeFontPadding="false"
            android:fontFamily="@font/ubuntumedium"
            android:layout_marginStart="@dimen/_10sdp" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <ImageView
            android:id="@+id/imageAddLink"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/web_link"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorIcons" />

        <TextView
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorIcons"
            android:id="@+id/textAddLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_url"
            android:includeFontPadding="false"
            android:fontFamily="@font/ubuntumedium"
            android:layout_marginStart="@dimen/_10sdp" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutDeleteNote"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:src="@drawable/delete"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorDelete" />

        <TextView
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorDelete"
            android:id="@+id/textDeleteNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_note"
            android:includeFontPadding="false"
            android:fontFamily="@font/ubuntumedium"
            android:layout_marginStart="@dimen/_10sdp" />

    </LinearLayout>

</LinearLayout>
