<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/searchbkg"
        android:background="@drawable/bkg_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_102sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/colorWhite"
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/my_notes"
        android:includeFontPadding="false"
        android:fontFamily="@font/ubuntubold"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layoutSearch"
        android:background="@drawable/background_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/textMyNotes">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/search"
            android:contentDescription="@string/app_name"
            app:tint="@color/colorSearchIcon" />

        <EditText
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:id="@+id/inputSearch"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:hint="@string/search_notes"
            android:includeFontPadding="false"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:fontFamily="@font/ubunturegular"
            android:layout_marginStart="@dimen/_12sdp"
            android:importantForAutofill="no" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMain"
        android:paddingBottom="@dimen/_12sdp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_9sdp"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        app:layout_constraintBottom_toTopOf="@+id/layout_accesibility"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch" />

    <ImageView
        android:id="@+id/noNoteImage"
        android:visibility="visible"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_240sdp"
        android:src="@drawable/nonoteimage"
        android:contentDescription="@string/app_name"
        android:scaleY="1.2"
        app:layout_constraintBottom_toTopOf="@+id/layout_accesibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch" />

    <TextView
        android:textSize="20sp"
        android:textColor="@color/colorTextHint"
        android:id="@+id/noNoteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_90sdp"
        android:text="@string/create_your_first_note"
        android:fontFamily="@font/ubuntumedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noNoteImage" />

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/layout_accesibility"
        android:background="@drawable/background_quick"
        android:padding="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageAddNote"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/add_outline"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_5sdp"
            app:tint="@color/colorIcons" />

        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/image"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_15sdp"
            app:tint="@color/colorIcons" />

        <ImageView
            android:id="@+id/imageAddWebLink"
            android:layout_width="@dimen/_23sdp"
            android:layout_height="@dimen/_23sdp"
            android:src="@drawable/web_link"
            android:contentDescription="@string/app_name"
            android:layout_marginStart="@dimen/_15sdp"
            app:tint="@color/colorIcons" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:background="@drawable/background_add_buton"
        android:padding="@dimen/_5sdp"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/add"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/layout_accesibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layout_accesibility" />

</androidx.constraintlayout.widget.ConstraintLayout>
