<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:paddingBottom="@dimen/_10sdp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        app:layout_constraintBottom_toTopOf="@+id/layout_miscellaneous">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_CreateNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="24dp"
                android:layout_height="19dp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcons" />

            <EditText android:textSize="@dimen/_25ssp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:id="@+id/inputNoteTitle"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/note_title"
                android:includeFontPadding="false"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:fontFamily="@font/ubuntubold"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:importantForAutofill="no"
                app:layout_constraintTop_toBottomOf="@+id/imageBack"/>

            <TextView
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/colorIcons"
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:fontFamily="@font/ubunturegular"
                app:layout_constraintEnd_toEndOf="@+id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@+id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@+id/inputNoteTitle"/>

            <EditText
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorTextHint"
                android:id="@+id/inputNoteSubtitle"
                android:background="@null"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/note_subtitle"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:fontFamily="@font/ubuntumedium"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewSubitileIndicator"
                app:layout_constraintTop_toBottomOf="@+id/textDateTime"/>

            <View android:id="@+id/viewSubitileIndicator"
                android:background="@drawable/subtitle_indicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="@+id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inputNoteSubtitle"/>

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/noteImage"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/inputNoteSubtitle"/>

            <ImageView
                android:id="@+id/imageRemoveNoteImage"
                android:background="@drawable/black_bkg"
                android:padding="@dimen/_4sdp"
                android:visibility="gone"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/delete"
                android:contentDescription="@string/app_name"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/noteImage"
                app:layout_constraintTop_toTopOf="@+id/noteImage"/>

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/layoutWebURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintTop_toBottomOf="@+id/noteImage">

                <TextView
                    android:textSize="@dimen/_13ssp"
                    android:autoLink="web"
                    android:id="@+id/textWebURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:layout_weight="1"
                    android:fontFamily="@font/ubunturegular"
                    android:textColorLink="@color/colorAccent"/>

                <ImageView
                    android:id="@+id/imageRemoveURL"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/delete"
                    android:contentDescription="@string/app_name"
                    app:tint="@color/colorWhite"/>
            </LinearLayout>

            <EditText
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:gravity="top"
                android:id="@+id/inputNote"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_400sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:minHeight="@dimen/_100sdp"
                android:hint="@string/type_note_here"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:fontFamily="@font/ubunturegular"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:importantForAutofill="no"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutWebURL"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_miscellaneous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
